替换了一些东西,接下来继续解决监听的问题!

--- a/ZZExtension/ZZExtension/Base.lproj/Main.storyboard
+++ b/ZZExtension/ZZExtension/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ZZViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9tI-Ee-61o"/>
                         <viewControllerLayoutGuide type="bottom" id="QC0-z4-OQP"/>
